583 fix sidebar scrollbar bugs (#590)
* fixed scrollbar of routePathInfoTab & routePathLinkTab

* fixed scrollbar of /routes/ page

* fixed scrollbar at nodeView

* renaming, routeShow -> routeItem, routesList -> routeList

* fixed sticky save button

--- a/src/components/sidebar/routePathView/routePathListTab/routePathLinksTab.scss
+++ b/src/components/sidebar/routePathView/routePathListTab/routePathLinksTab.scss
@@ -2,15 +2,16 @@
 @import '../../../shared/styles/flexbox';
 @import '../../../shared/styles/form';
 
-.routePathLinksView {
+.RoutePathLinksTabView {
     display: flex;
     flex-direction: column;
+    height: 100%;
     font-weight: bold;
     color: $labelColor;
     font-size: $mediumFontSize;
+    overflow-y: auto;
 
     .contentWrapper {
-        overflow-y: auto;
         padding-left: 10px;
         padding-right: 10px;
     }
